--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "@types/node": "^18",
     "nuxt": "^3.6.2",
     "tailwindcss": "^3.3.2"
+  },
+  "dependencies": {
+    "@nuxtjs/tailwindcss": "^6.8.0",
+    "@tailwindcss/forms": "^0.5.3"
   }
 }
