--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nuxt/devtools": "latest",
     "@types/node": "^18",
     "nuxt": "^3.6.2",
+    "nuxt-icon": "^0.4.2",
     "tailwindcss": "^3.3.2"
   },
   "dependencies": {
